--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,7 @@
-certifi==2018.4.16
-chardet==3.0.4
+certifi>=2018.4.16
 idna==2.7
 requests>=2.20.0
 rpi-ws281x==4.0.0
-soco==0.16
+soco==0.17
 urllib3==1.23
 xmltodict==0.11.0
